# helper_bot

./: .gitignore  README.md  main.py
,github/workflows/: code_style.yml
cogs/: meta.py  mod.py  rep.py  tags.py  ticket.py
core/: __init__.py  bot.py  constants.py  database.py  errors.py  help.py  logger.py  models.py  utils.py
helper_bot-main/: LICENSE  README.md  main.py  noxfile.py  pyproject.toml
helper_bot-main/core/: constants.py  errors.py  utils.py
pages/: warn_pag.py
