[tool.poetry]
name = "helper-bot"
version = "0.1.0"
description = "Helper Bot for DevConnect."
authors = ["devconnectltd"]
license = "MIT"
readme = "README.md"
packages = [{include = "helper_bot"}]

[tool.poetry.dependencies]
python = "^3.8"
disnake = "^2.8.1"
disnake-jishaku = "^2.6.5"
attrs = "^23.1.0"
asyncpg = "^0.27.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.262"
black = "^23.3.0"
isort = "^5.12.0"
nox = "^2022.11.21"

[tool.ruff]
line-length = 120

[tool.pyright]
pythonVersion = "3.8"
typeCheckingMode = "strict"
reportPrivateUsage = false
reportImportCycles = false
reportIncompatibleMethodOverride = false

[tool.black]
line-length = 120
target-version = ['py38']

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
